[package]
name = "forward-rpc"
version = "0.1.0"
edition = "2024"

[workspace]

members = [
    "conlock",
    "const_string",
    "forward",
    "forward_macro",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
const_string = {path = "const_string"}
conlock = { path = "conlock" }
forward = { path = "forward" }

[dev-dependencies]
bincode = "2.0.1"
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
